[package]
name = "pyrostratos"
license = "MIT"
version = "0.0.1"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
embassy-sync = { version = ">=0.4.0", git = "https://github.com/embassy-rs/embassy"}
embassy-executor = { version = ">=0.3.3", git = "https://github.com/embassy-rs/embassy", features = ["integrated-timers"] }
embassy-time = { version = ">=0.1.5", git = "https://github.com/embassy-rs/embassy", features = ["unstable-traits", "tick-hz-32_768"] }
# embassy-stm32 = { version = ">=0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "unstable-traits", "stm32f429zi", "unstable-pac", "memory-x", "time-driver-any", "exti"]  }

cortex-m-semihosting = "0.5.0"
embedded-alloc = "0.5.1"
heapless = "0.8.0"
nb = "1.1.0"
panic-halt = "0.2.0"

[dependencies.stm32f1]
version = "0.15.1"
features = ["stm32f103", "rt"]

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["stm32f103", "rt", "medium"]

[dependencies.cortex-m]
version = "0.7.7"
# only set critical-section-single-core if using 
# bare metal without an RTOS
features = ["critical-section-single-core"]

[dependencies.cortex-m-rt]
version = "0.7.3"
features = ["device"]

[dependencies.stm32f3]
version = "0.15.1"
features = ["stm32f303", "rt"]

[dependencies.stm32f3xx-hal]
version = "0.9.2"
features = ["stm32f303x8", "rt", "ld"]

[profile.dev]
opt-level = "z"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z" # better optimizations

