[package]
name = "pyrostratos"
license = "MIT"
version = "0.0.1"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cortex-m-semihosting = "0.5.0"
embedded-alloc = "0.5.1"
heapless = "0.8.0"
nb = "1.1.0"
panic-halt = "0.2.0"

[dependencies.rtic]
version = "2.0.1"
features = ["thumbv7-backend"]

[dependencies.stm32f1]
version = "0.15.1"
features = ["stm32f103", "rt"]

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["stm32f103", "rt", "medium"]

[dependencies.cortex-m]
version = "0.7.7"
# only set critical-section-single-core if using 
# bare metal without an RTOS
features = ["critical-section-single-core"]

[dependencies.cortex-m-rt]
version = "0.7.3"
features = ["device"]

[profile.dev]
opt-level = "z"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z" # better optimizations

